# gk3d

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: Camera.cpp  Camera.h  Fog.cpp  Fog.h  Light.cpp  Light.h  Scene.cpp  Scene.h  Shader.cpp  SpotLight.frag  SpotLight.vert  Texture.cpp  Texture.h  main.cpp
